<resources>
    <string name="app_name">Rentify</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="new_property_value">New Property\nValue</string>
    <string name="novice">Novice</string>
    <string name="expert">Expert</string>
    <string name="count_of_eighteen">%s of 18</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="income_expense">Income/Expense</string>
    <string name="photos">Photo\'s</string>
    <string name="property_info">Property Info</string>
    <string name="user_info">User Info</string>
    <string name="settings">Settings</string>
    <string name="files">Files</string>
    <string name="save">Save</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="user_agreement">User Agreement</string>
    <string name="generate_summary_add_property_info_photo"> Would you like to generate the Client Summary Report of property. Please complete following steps. \n 1. Please add your property information. \n 2. Please add property photo\'s  </string>
    <string name="purchase_price"> Purchase Price  </string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="terms_data">Awetarky Inc. Makes No Representations or Warranties Regarding Content\n\n
The content and associated financial model in the Real Estate Investing Analyst (the “App”) are constantly evolving to address issues such as potential errors, changing market conditions and products, and user feedback. Therefore, the content and all analysis associated with the App are provided to you on an “as-is” and “as available” basis. Awetarky Inc. makes no representations or warranties of any kind, express or implied, as to the operation of the App or the information, content, materials, products, or services included on or associated with the App. You expressly agree that your use of the App and all products and services included on or associated with the App is at your sole risk. It is further agreed to that any and all financial information gathered from this “App” will not be the user’s final bases for verifying the investment. As in all investments, you need to contact your accountant and attorney prior to making any real estate investment for there review.\n\n
Awetarky Inc. does not make any representations, warranties or guarantees, express or implied, regarding the accuracy of the calculations, Default settings, correctness, or completeness of the content or the services and products associated with the App, nor the safety, reliability, title, timeliness, completeness, merchantability, conformity, or fitness for a particular purpose of the content or the services and products associated with the App. It is your sole responsibility to independently evaluate the accuracy, correctness, or completeness of the content and the services and products associated with the App. The content of the App is intended only to assist you with financial due diligence and is broad in scope and does not consider your specific financial situation. Your financial situation is unique, and the information and analysis may not be appropriate for your situation. Accordingly, before making any final decisions or implementing any financial strategy, Awetarky Inc. recommends that you obtain additional information and advice of your accountant and other financial advisors who are fully aware of your specific circumstances.\n\n
Limitations on Awetarky Inc. Liability\n\n
Awetarky Inc. shall in no event be responsible to, or liable to, you, or any third party, whether in contract, warranty, tort (including negligence) or otherwise, for any damage, including, but not limited to, special, incidental, indirect, or consequential damages that include, but are not limited to, damages for any loss of profit, revenue, or business, as a direct or indirect result of:
(I) Your breach or violation of the terms and conditions of this agreement;
(II) Your access and use of the App;
(III) Your delay in accessing or inability to access or use the App for any reason;
(IV) Your downloading of any of the content or the collective work for your use;
(V) Your reliance upon or use of the content or the collective work; or
(VI) Any information, software, products, or services obtained through the App, or otherwise, arising out of the use of the App, whether resulting in whole or in part, from breach of contract, tortuous behavior, negligence, strict liability or otherwise, even if Awetarky Inc. and/or its suppliers had been advised of the possibility of damages.\n\n
Awetarky Inc. liability and the liability of its affiliates, directors, officers, employees, and agents arising out of this agreement shall not exceed $100.\n\n
You specifically acknowledge that Awetarky Inc. shall not be liable for user-generated content or the defamatory, offensive, or illegal conduct of any third party, and that the risk of harm or damage from such user-generated content and third-party conduct rests entirely with you.\n\n
You and we agree that any cause of action arising out of or related to the App must commence within one (1) year after the cause of action accrues. Otherwise, such cause of action is permanently barred.\n\n
Certain state laws do not allow limitations on implied warranties or the exclusion or limitation of certain damages. If these laws apply to you, some or all of the above disclaimers, exclusions, or limitations may not apply to you.\n\n
Your Indemnification of Awetarky Inc.\n\n
You shall defend, indemnify, and hold harmless Awetarky Inc. and its officers, directors, shareholders, employees, independent contractors, agents, representatives, and affiliates from and against all claims and expenses, including, but not limited to, attorneys’ fees, arising out of, or attributable to: (I) any breach or violation of this Agreement by you; (II) your access or use of the App; and/or (III) your transmissions, submissions, or postings (i.e., your own User Generated Content).\n\n
Amendments of this Agreement\n\n
Awetarky Inc. reserves the right to update, amend, and/or change this Agreement at any time in its sole discretion and without notice. Updates to this Agreement will be posted here. You are encouraged to revisit this Agreement from time to time in order to review any changes that have been made. Awetarky Inc.  last update was November 1, 2019. Your continued access and use of the App following the posting of any such changes shall automatically be deemed your acceptance of all changes.\n\n

Awetarky Inc. Remedies\n\n
You acknowledge that Awetarky Inc. may be irreparably damaged if this Agreement is not specifically enforced, and damages at law would be an inadequate remedy. Therefore, in the event of a breach or threatened breach of any provision of this Agreement by you, Awetarky Inc.  shall be entitled, in addition to all rights and remedies, to an injunction restraining such breach or threatened breach, without being required to show any actual damage or to post an injunction bond, and/or to a decree for specific performance of the provisions of this Agreement. For purposes of this Agreement, you agree that any action or proceeding with regards to such injunction restraining such breach or threatened breach shall be brought in the courts of record of Los Angeles County, California, or the United States District Court, so CAL District of California. You consent to the jurisdiction of such court and waive any objection to the laying of the venue of any such action or proceeding in such court. You agree that service of any court paper may be affected on such party by mail or in such other manner as may be provided under applicable laws, rules of procedure, or local rules.\n\n
Governing Law; Arbitration\n\n
You agree that: (I) the App shall be deemed solely based in the State of California; and (II) the App shall be deemed a mobile software application that does not give rise to personal jurisdiction over Awetarky Inc., either specific or general, in jurisdictions other than the State of California. This Agreement is to be governed by and construed in accordance with the internal laws of the State of California, without regard for principles of conflicts of laws. Any civil action, claim, dispute, or proceeding arising out of or relating to this Agreement, except for an injunctive action regarding a breach or threatened breach of any provision of this Agreement by you as provided above, shall be referred to final and binding arbitration, before a single arbitrator, under the commercial arbitration rules of the American Arbitration Association in Los Angeles County, California.\n\n
THEREFORE, YOU DO NOT HAVE THE OPPORTUNITY TO GO TO COURT TO ASSERT OR DEFEND YOUR RIGHTS AND YOU GIVE UP YOUR RIGHT TO PARTICIPATE IN OR BRING CLASS ACTIONS. BY USING THE APP YOU CONSENT TO THESE RESTRICTIONS.\n\n
You and Awetarky Inc. shall select the arbitrator, and if you and Awetarky Inc. are unable to reach agreement on selection of the arbitrator within thirty (30) days after the notice of arbitration is served, then the American Arbitration Association shall select the arbitrator. Arbitration shall not commence until the party requesting it has deposited Two Thousand Dollars ($2,000.00) with the arbitrator for the arbitrator’s fees and costs. The party requesting arbitration shall advance such sums as are required from time to time by the arbitrator to pay the arbitrator’s fees and costs until the prevailing party is determined or the parties have agreed in writing to an alternate allocation of fees and costs.\n\n
Judgment upon any award rendered by the arbitrator shall be final, binding, and conclusive upon you and Awetarky Inc.  and you’re and Awetarky Inc. respective administrators, executors, legal representatives, successors and assigns, and may be entered in any court of competent jurisdiction. Notwithstanding the previous sentence, in no event shall either you or Awetarky Inc. be entitled to punitive, special, indirect or consequential damages and both you and Awetarky Inc.  hereby waive your and Awetarky Inc.  respective rights to any punitive, special, indirect, or consequential damages, including, but not limited to, damages for any loss of profit, revenue, or business.\n\n
Should a dispute arise, and should the arbitration provisions herein become inapplicable or unenforceable, or in any instance of any lawsuit between you and Awetarky Inc., jurisdiction over and venue of any suit shall be exclusively in the state and federal courts sitting in Los Angeles, California.\n\n
Miscellaneous\n\n
If any portion of this Agreement is deemed unlawful, void or unenforceable by any arbitrator or court of competent jurisdiction, this Agreement as a whole shall not be deemed unlawful, void or unenforceable, but only that portion of this Agreement that is unlawful, void, or unenforceable shall be stricken from this Agreement.\n\n
The headings contained in this Agreement are for convenience of reference only, are not to be considered a part of this Agreement and shall not limit or otherwise affect in any way the meaning or interpretation of this Agreement.\n\n
All covenants, agreements, representations, and warranties made in this Agreement, as may be amended by Awetarky Inc. from time to time, shall survive your acceptance of this Agreement and the termination of this Agreement.</string>
    <string name="preview">Preview</string>
    <string name="welcome_to_rentify">Welcome to Rentify</string>
    <string name="invest_for_long_term">Invest for long term</string>
    <string name="select_language">Select Language</string>
    <string name="agree_terms_amp_conditions"><![CDATA[I Agree terms & conditions]]></string>
</resources>