<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appcode.splash.TermsActivity">

    <TextView
        android:id="@+id/tvAgreement"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@drawable/ic_bg_home"
        android:gravity="center_horizontal|bottom"
        android:padding="8dp"
        android:text="@string/user_agreement"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView3"
        android:overScrollMode="never"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAgreement"
        app:layout_constraintBottom_toTopOf="@+id/isAgreeTerms"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvTermsText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/terms_amp_conditions"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/terms_data"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:lineSpacingExtra="1dp"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTermsText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <CheckedTextView
        android:id="@+id/isAgreeTerms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:drawableStart="@drawable/selector_terms_check"
        android:text="@string/agree_terms_amp_conditions"
        android:drawablePadding="10dp"
        android:textColor="@color/black"
        android:paddingStart="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnGetStart"
        app:layout_constraintEnd_toEndOf="@+id/btnGetStart"
        app:layout_constraintStart_toStartOf="@+id/btnGetStart" />


    <TextView
        android:id="@+id/btnGetStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/rounded_rect_drawable"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/let_s_get_started"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>