<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/headerTool"
    android:background="@drawable/header_blue"
    tools:context=".appcode.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/drawable_white_bg_curve"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:overScrollMode="never"
            android:layout_marginTop="8dp"
            android:background="@drawable/drawable_white_bg_curve"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@+id/ivSetting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:text="@string/welcome_to_rentify"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvPreview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:text="@string/preview"
                    android:textColor="@color/dark_grey"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

                <TextView
                    android:id="@+id/tvInvest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:text="@string/invest_for_long_term"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPreview" />


                <EditText
                    android:id="@+id/edtAmount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/edt_rounded_theme_drawable"
                    android:digits="0123456789."
                    android:drawableStart="@drawable/ic_dollar"
                    android:hint="0.00"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="16dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvInvest" />

                <TextView
                    android:id="@+id/edtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@color/white"
                    android:text="@string/purchase_price"
                    android:textColor="@color/blue_theme"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/edtAmount"
                    app:layout_constraintStart_toStartOf="@+id/edtAmount"
                    app:layout_constraintTop_toTopOf="@+id/edtAmount" />


                <TextView
                    android:id="@+id/tvAccessibleMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:text="@string/select_language"
                    android:textColor="@color/dark_grey"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtAmount" />

                <RadioGroup
                    android:id="@+id/langGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvAccessibleMode">

                    <RadioButton
                        android:id="@+id/englishBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/black"
                        android:checked="true"
                        android:paddingStart="10dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/english"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/spanishBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/black"
                        android:paddingStart="10dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/spanish"
                        android:textStyle="bold" />


                </RadioGroup>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <TextView
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rect_drawable"
            android:drawableEnd="@drawable/ic_next_arrow"
            android:gravity="center"
            android:minWidth="120dp"
            android:drawablePadding="16dp"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivSetting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ivSetting"
            app:layout_constraintTop_toTopOf="@+id/ivSetting" />

        <TextView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rect_drawable"
            android:drawableStart="@drawable/ic_back_arrow"
            android:gravity="center"
            android:minWidth="120dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:drawablePadding="16dp"
            android:paddingEnd="30dp"
            android:paddingBottom="5dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivSetting"
            app:layout_constraintEnd_toStartOf="@+id/ivSetting"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivSetting" />

        <ImageView
            android:id="@+id/ivSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/oval_drawable"
            android:backgroundTint="@color/dark_orange"
            android:padding="5dp"
            android:src="@drawable/ic_settings"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnNext"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnBack" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/titleHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:padding="8dp"
        android:text="@string/language"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <include
        android:id="@+id/ivLogo"
        layout="@layout/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/const1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>