<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_bg_blue_border_round_drawable"
    android:orientation="vertical"
    android:backgroundTint="@color/white"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/tvKeyStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/generate_summary_add_property_info_photo"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="1dp"
            android:background="@color/lyt_grey"/>

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_marginTop="1dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/lyt_grey"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_toStartOf="@+id/btnConfirm"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="17sp" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>